fix: center container overlapping

--- a/style.css
+++ b/style.css
@@ -52,7 +52,11 @@ a.link.nav-tabs-item img {
 #sidebar-content {
 	width: 320px;
 }
+
 @media (min-width: 1024px) {
+	#body-content {
+		padding-left: 20rem !important;
+	}
 	#content-area {
 		margin-left: max(0px, calc(50vw - 348px - 20rem)) !important;
 	}
